# WageCalculator

./: .gitignore  README.md  main.py  requirements.txt  setup.cfg
app/: __init__.py  calculator.py  filereader.py  models.py  run.py
tests/: data_test.txt  data_test_invalid.txt  data_test_invalid2.txt  data_test_invalid3.txt  test_calculator.py  test_filereader.py  test_main.py  test_models.py
