[metadata]
name = wagecalculator
version = 1.0.0
license = MIT
author = Erik J Ardila
url = https://github.com/EjacDev/WageCalculator
description = Wage Calculator - Coding Exercise.
long_description = file: README.md
long_description_content_type = text/markdown
zip_safe = False

[options]
packages = app
include_package_data = true

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = app